--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
         <button type="button" class="btn text-light btn-danger">Discover Vacation Rentals</button>
       </div>
       <!-- hero section search form start -->
-      <div class="container mt-5 custom-container rounded" style="background-color: #1C1B1F; ; width: 100%; "  >
+      <div class="container custom-container rounded" id="move1" style="background-color: #1C1B1F; ; width: 100%; "  >
         <div class="container  "  style="margin-top: 150px;">   
             <form   >
-                <div class="form-row justify-content-center rounded-3"  >
+                <div class="form-row justify-content-center rounded-3">
                     <!-- Destination -->
                     <div class="form-group col-lg-3 col-md-6 col-sm-12 ">
                         <input type="text" class="form-control " id="location" placeholder="Enter destination" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
