--- a/details-page/details.html
+++ b/details-page/details.html
@@ -42,22 +42,31 @@
     <nav class="navbar" style="background-color: #FF1717;">
       <div class="container container-fluid d-flex flex-column">
         <!-- First row: Unordered list aligned to the right -->
-        <div class="d-flex justify-content-end w-100 px-1">
+        <div class="d-flex login-nav justify-content-end w-100 px-1">
           <ul class="navbar-nav d-flex flex-row">
-            <li class="nav-item  px-3 align-items-start">
+            <li class="nav-item  px-3  register-nav">
               <a class="nav-link" href="#"><button type="button"
                   class="btn btn-light text-danger" style="height: 30px; display: flex; align-items: center; justify-content: center;"><b>Register</b></button></a>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3 login-nav">
               <a class="nav-link" href="login/index.html">
                 <button type="button" class="btn btn-light text-danger" style="height: 30px; display: flex; align-items: center; justify-content: center;">
                   <b>Sign in</b>
                 </button>
               </a>
             </li>
-            
           </ul>
         </div>
+        <style>
+          @media (max-width: 768px) {
+          .register-nav {
+                margin-right: 30px;
+                }
+          .login-nav{
+            margin-right: 20px;
+          }
+          }
+       </style>
         <!-- Second row: Logo centered -->
         <div class="d-flex justify-content-center w-100 flex-grow-1 align-items-center">
           <a class="navbar-brand" href="../index.html">
@@ -130,7 +139,7 @@ div.scrollmenu a:hover {
       <div class="row">
                 <!-- Toggle Filter Button in Mobile View -->
                 <div class="col-12 d-lg-none" >
-                  <button class="btn btn-danger mb-3 d-flex text-center align-items-center justify-content-center pe-4" style="background-color: red;"  id="filterButton" onclick="toggleFilter()"><i class="fa-solid fa-filter p-2"></i> <b>Filters</b></button>
+                  <button class="btn btn-danger mb-3 d-flex text-center align-items-center justify-content-center" style="background-color: red;"  id="filterButton" onclick="toggleFilter()"><i class="fa-solid fa-filter p-2"></i> <b>Filters</b></button>
                   <div id="filterList">
                     <!-- Add more filters as needed -->
                   </div>
@@ -197,8 +206,10 @@ div.scrollmenu a:hover {
   
         <!-- Filters Section (Left Side) - Visible in Normal View -->
         <div class="col-lg-3 d-none d-lg-block">
+          <div class="form-check">
           <h4 class="mb-3 ">Select Filters</h4>
           <h5 class="mt-3">Recommended for you</h5>
+          </div>
           <div class="form-check ">
             <input class="form-check-input border-danger filter-checkbox-colour"  type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Air conditioning</label>
@@ -227,7 +238,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter8">
             <label class="form-check-label" for="filter8">Free cancellation</label>
         </div>
+        <div class="form-check">
           <h5 class="mt-3">Price per night</h5>
+          </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">₹ 0 - ₹ 2000</label>
@@ -252,7 +265,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter8">
             <label class="form-check-label" for="filter8">₹ 12000 - ₹ 15000</label>
           </div>
-          <h5 class="mt-3">Meals</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Meals</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Self catering</label>
@@ -261,7 +276,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Breakfast included</label>
           </div>
-          <h5 class="mt-3">Facilities</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Facilities</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Fitness centre</label>
@@ -286,7 +303,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Swimming Pool</label>
           </div>
-          <h5 class="mt-3">Property Type</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Property Type</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Homestays</label>
@@ -311,7 +330,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Lodges</label>
           </div>
-          <h5 class="mt-3">Bed preference</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Bed preference</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Twin beds</label>
@@ -320,7 +341,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Double bed</label>
           </div>
-          <h5 class="mt-3">User Rating</h5>
+          <div class="form-check">
+            <h5 class="mt-3">User Rating</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Excellent: 4.2+</label>
@@ -333,7 +356,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Good: 3+</label>
           </div>
-          <h5 class="mt-3">Room Views</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Room Views</h5>
+            </div>
           <div class="form-check"> 
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">City View</label>
@@ -346,7 +371,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Mountain View</label>
           </div>
-          <h5 class="mt-3">Room facilities</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Room facilities</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Air conditioning</label>
@@ -387,7 +414,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Shower</label>
           </div>
-          <h5 class="mt-3">Property rating</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Property rating</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">3 stars</label>
@@ -408,7 +437,9 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">Unrated</label>
           </div>
-          <h5 class="mt-3">Reservation policy</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Reservation policy</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Book without credit card</label>
@@ -417,8 +448,10 @@ div.scrollmenu a:hover {
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter4">
             <label class="form-check-label" for="filter4">No prepayment</label>
           </div>
-          <h5 class="mt-3">Distance from centre of 
-            Tiruvannāmalai</h5>
+          <div class="form-check">
+            <h5 class="mt-3">Distance from centre of 
+              Tiruvannāmalai</h5>
+            </div>
           <div class="form-check">
             <input class="form-check-input filter-checkbox-colour" type="checkbox" value="" id="filter3">
             <label class="form-check-label" for="filter3">Less than 3 km</label>
