--- a/login/index.html
+++ b/login/index.html
@@ -14,6 +14,8 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/sign-in/" />
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3" />
+  <link rel="icon" type="image/x-icon" href="../assets/img/favicon.png">
+
 
   <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
