--- a/details-page/details.html
+++ b/details-page/details.html
@@ -46,19 +46,6 @@
             </li>
           </ul>
         </div>
-        <style>
-          @media (max-width: 768px) {
-            .login-nav {
-              justify-content: center;
-
-            }
-          }
-          @media (min-width: 768px) {
-            .login-nav {
-              justify-content: end;
-            }
-          }
-       </style>
         <!-- Second row: Logo centered -->
         <div class="d-flex justify-content-center w-100 flex-grow-1 align-items-center">
           <a class="navbar-brand" href="../index.html">
@@ -91,25 +78,6 @@
         <i class="fa-solid fa-blog p-2"></i> About Us
       </button></a>
     </div>
-    <style>
-      div.scrollmenu {
-  background-color: #333;
-  overflow: auto;
-  white-space: nowrap;
-}
-
-div.scrollmenu a {
-  display: inline-block;
-  color: white;
-  text-align: center;
-  padding: 14px;
-  text-decoration: none;
-}
-
-div.scrollmenu a:hover {
-  background-color: #f50e0e;
-}
-    </style>
   </header>
   <main>
     <!-- brudcrum start -->
@@ -119,7 +87,7 @@ div.scrollmenu a:hover {
         aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item text-danger" style="list-style: none;">
-            <a href="#" style="text-decoration: none; " class="text-danger"><b>Home</b></a>
+            <a href="../index.html" style="text-decoration: none; " class="text-danger"><b>Home</b></a>
           </li>
           <li class="breadcrumb-item active" aria-current="page"><b>Tamil Nadu</b></li>
           <li class="breadcrumb-item active" aria-current="page"><b>Tiruvannamalai</b></li>
@@ -150,7 +118,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (3) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (3) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -463,7 +431,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (7) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (7) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -509,7 +477,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (8) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (8) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -555,7 +523,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (10) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (10) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -601,7 +569,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (11) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (11) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -647,7 +615,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (12) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (12) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -693,7 +661,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (13) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (13) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -739,7 +707,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (14) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (14) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
@@ -785,7 +753,7 @@ div.scrollmenu a:hover {
                 <div class="row">
                   <div class="col-md-12 col-lg-3 col-xl-3 mb-4 mb-lg-0">
                     <div class="bg-image hover-zoom ripple rounded ripple-surface">
-                      <img src="./hotel images/Screenshot (16) 1.jpg" class="w-100" />
+                      <a href="../single-hotel-page/index.html"><img src="./hotel images/Screenshot (16) 1.jpg" class="w-100" /></a>
                       <a href="#!">
                         <div class="hover-overlay">
                           <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
