--- a/details-page/details.html
+++ b/details-page/details.html
@@ -94,18 +94,18 @@
   </header>
   <main>
     <!-- hero section search form start -->
-    <div class="container custom-container rounded" id="move1" style="background-color: #1C1B1F; ; width: 100%; "  >
-      <div class="container  "  style="margin-top:-0px;">   
-          <form   >
-              <div class="form-row justify-content-center rounded-3">
+    <div class="container custom-container rounded justify-content-center align-items-center" id="move1" style="background-color: #1C1B1F; width: 100%; height: 50px;">
+      <div class="container">
+          <form>
+              <div class="row justify-content-center rounded-3">
                   <!-- Destination -->
-                  <div class="form-group col-lg-3 col-md-6 col-sm-12 ">
-                      <input type="text" class="form-control " id="location" placeholder="Enter destination" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
+                  <div class="form-group col-lg-3 col-md-6 col-sm-12">
+                      <input type="text" class="form-control" id="location" placeholder="Enter destination" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
                   </div>
                   <!-- Check-in and Check-out Dates -->
                   <div class="form-group col-lg-4 col-md-6 col-sm-12">
                       <input type="text" class="form-control" id="dates" placeholder="Check-in - Check-out" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
-                       </div>
+                  </div>
                   <!-- Combined Input Box for Adults, Children, and Rooms -->
                   <div class="form-group col-lg-3 col-md-6 col-sm-12">
                       <input type="text" class="form-control" id="guests" placeholder="Adults, Children & Rooms" required style="border-radius: 5px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);">
@@ -150,13 +150,13 @@
                   </div>
                   <!-- Search Button -->
                   <div class="form-group col-lg-2 col-md-6 col-sm-12">
-                      <button type="button" class="btn text-light " id="search" style="background-color: #FF1717;" onclick="window.location.href='./details-page/details.html'">Search</button>
+                      <button type="button" class="btn text-light" id="search" style="background-color: #FF1717;" onclick="window.location.href='./details-page/details.html'">Search</button>
                   </div>
               </div>
           </form>
-          
       </div>
-    </div>
+  </div>
+  
   </div>
   <!-- hero section search form end -->
     <!-- brudcrum start -->
