today changes singel hotel page are created and images are added

--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -17,6 +17,7 @@
             crossorigin="anonymous"
         />
         <link href="sign-in.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 
     <body>
@@ -89,6 +90,137 @@
         </nav>
       </div>
       <!-- brudcrum end -->
+<!-- hotel gallery page start  -->
+<div class="container">
+<div class="gallery-hotel border container shadow-sm rounded-3">
+  <div class="row">
+    <div class="col-lg-8 col-md-6 col-sm-6 pb-6">
+      <h4 class="text-danger p-1"><b>Ponmozhi Residency</b></h4>
+      <h5 class="p-1" style="opacity: 60%;">
+        <i class="fa-solid fa-location-dot px-1"></i>Vengikkal Road PANMOZHI RESIDENCY, 606604 Tiruvannamalai, India
+      </h5>
+      <img src="image/image 3 (1).jpg" class="img-fluid rounded ms-1" alt="...">
+      <div class="d-flex justify-content-between mt-4"> 
+        <div class="col-md-4">
+          <div class="image-container">
+            <img src="image/image 1.jpg"
+              class="img-fluid  rounded-3 m-1 px-1" alt="Image 1">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container">
+            <img src="image/image 2.jpg" class="img-fluid  rounded-3 m-1 px-1" alt="Image 1">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="image-container">
+            <img
+              src="image/image 4.jpg"
+              class="img-fluid  rounded-3 m-1 px-1" alt="Image 1">
+          </div>
+        </div>
+      </div>
+      <p class="mt-4" style="font-size: 18px;"><b>PONMOZHI RESIDENCY</b> offers accommodations in Tiruvannamalai. This five-star hotel provides a 24-hour front desk, an ATM, and complimentary WiFi. Rooms have a balcony with views of the garden.</p>
+      <p class="mt-4" style="font-size: 18px;">The hotel's rooms have air conditioning, a desk, a balcony with a mountain view, a private bathroom, a flat-screen TV, bed linen, and towels. At Ponmozhi Residency, each room has a seating space.</p>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-6">
+      <div class="right-review border shadow-sm rounded-3 m-3 pb-2" >
+        <!-- rating section start  -->
+        <div class="d-flex justify-content-start mt-2 ms-3 mb-1">
+          <div class="right rounded-1">
+            <div style="font-size: 15px;"><b>6.2</b></div>
+          </div>
+          <div class="align-items-start">
+            <h4 class="text-danger pt-2 ps-1 me-2 text-start" style="font-size: 16px;">Good <br> <span class="" style="font-size: 12px; color: gray;">371 review</span></h4>
+          </div>
+        </div>
+        <hr>
+        <!-- rating section end  -->
+        <div class="container">
+          <h6>See what guests loved the most:</h6>
+          <p>“Support from the Management , Rooms are clean, decent and nearby to the bus stand... It's very close to Anna Arch which is at 2km before the final Girivalam”</p>
+          <div class="d-flex align-items-center justify-content-start">
+              <h5 style="width: 30px; height: 30px;" class="bg-primary text-center text-light rounded-circle">P</h5>
+              <p class="px-2 pt-1">&nbsp;Poovarasan</p>
+          </div>
+          <hr class="centered-hr">
+          <p>Excellent setting, hospitality, very excellent human beings helped me a lot on pournami, really supportive, nice air conditioning, a good motel to be recommended for pilgrimages students.</p>
+          <div class="d-flex align-items-center justify-content-start">
+              <h5 style="width: 30px; height: 30px;" class="bg-warning text-center text-light rounded-circle">M</h5>
+              <p class="px-2 pt-1">&nbsp;Manikandan</p>
+          </div>
+          <hr class="centered-hr">
+          <p>Nice and tidy room.
+            Friendly and excellent service</p>
+          <div class="d-flex align-items-center justify-content-start">
+              <h5 style="width: 30px; height: 30px;" class="bg-success text-center text-light rounded-circle">S</h5>
+              <p class="px-2 pt-1">&nbsp;Selvaganapathi</p>
+          </div>
+          <hr class="centered-hr">
+          <h6>Accommodation Rating</h6>
+          <div class="container mt-5">
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-flex justify-content-between">
+                      <p>Staff members</p>
+                      <span id="rangeValue" class="slider-value">7.2</span>
+                    </div>
+                    <div class="range-container">
+                      <input type="range" id="rangeInput" class="range-input rounded" min="0" max="10" value="7.2" disabled>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <p>Luxury</p>
+                      <span id="rangeValue" class="slider-value">6.8</span>
+                    </div>
+                    <div class="range-container">
+                      <input type="range" id="rangeInput" class="range-input rounded" min="0" max="10" value="6.8" disabled>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <p>Fair price</p>
+                      <span id="rangeValue" class="slider-value">8.4</span>
+                    </div>
+                    <div class="range-container">
+                      <input type="range" id="rangeInput" class="range-input rounded" min="0" max="10" value="8.4" disabled>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                      <p>Location</p>
+                      <span id="rangeValue" class="slider-value">8.0</span>
+                    </div>
+                    <div class="range-container">
+                      <input type="range" id="rangeInput" class="range-input rounded" min="0" max="10" value="8.0" disabled>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+      </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="roomtype-price border container shadow-sm rounded-3 mt-4">
+  <div class="row d-flex justify-content-evenly">
+    <div class="d-flex justify-content-around">
+    </div>
+    <div class="col-lg-3">
+      <h5 class="pt-4 ms-1 text-center" style="color: #FF1717;">Room Type</h5>
+      <h6 class="pt-1 ms-1 text-center">Classic Room</h6>
+    </div>
+    <div class="col-lg-3">
+      <h1>&nbsp;</h1>
+      <h6 class="pt-1 ms-1 text-center">Most popular facilities</h6>
+    </div>
+    <div class="col-lg-3">
+      <h1>&nbsp;</h1>
+    </div>
+    <div class="col-lg-3">
+      <h5 class="pt-4 me-1 text-center" style="color: #FF1717;">Price</h5>
+      <h5 class="pt-1 me-1 text-center" style="color: #FF1717;">Price</h5>
+    </div>
+  </div>
+</div>
+</div>
+<!-- hotel gallery page end -->
         </main>
         <footer>
             <!-- place footer here -->
