--- a/test1.html
+++ b/test1.html
@@ -85,6 +85,144 @@
   </div>
 </nav>
 
+
+
+<div class="container custom-container rounded" id="move1" style="background-color: #1C1B1F; width: 100%;">
+  <div class="container">
+      <form>
+          <div class="row justify-content-center rounded-3">
+              <!-- Destination -->
+              <div class="form-group col-lg-3 col-md-6 col-sm-12">
+                  <input type="text" class="form-control" id="location" placeholder="Enter destination" required>
+              </div>
+              <!-- Check-in and Check-out Dates -->
+              <div class="form-group col-lg-4 col-md-6 col-sm-12">
+                  <input type="text" class="form-control" id="dates" placeholder="Check-in - Check-out" required>
+              </div>
+              <!-- Combined Input Box for Adults, Children, and Rooms -->
+              <div class="form-group col-lg-3 col-md-6 col-sm-12">
+                  <input type="text" class="form-control" id="guests" placeholder="Adults, Children & Rooms" required>
+                  <div class="dropdown-menu p-3" id="guestsDropdown" aria-labelledby="guestsDropdown" style="display: none;">
+                      <div class="form-group">
+                          <label for="adults">Adults</label>
+                          <div class="input-group">
+                              <div class="input-group-prepend">
+                                  <button class="btn btn-outline-secondary btn-minus" type="button" id="adults-minus">-</button>
+                              </div>
+                              <input type="number" class="form-control" id="adults" min="0" value="0" required>
+                              <div class="input-group-append">
+                                  <button class="btn btn-outline-secondary btn-plus" type="button" id="adults-plus">+</button>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="children">Children</label>
+                          <div class="input-group">
+                              <div class="input-group-prepend">
+                                  <button class="btn btn-outline-secondary btn-minus" type="button" id="children-minus">-</button>
+                              </div>
+                              <input type="number" class="form-control" id="children" min="0" value="0" required>
+                              <div class="input-group-append">
+                                  <button class="btn btn-outline-secondary btn-plus" type="button" id="children-plus">+</button>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="rooms">Rooms</label>
+                          <div class="input-group">
+                              <div class="input-group-prepend">
+                                  <button class="btn btn-outline-secondary btn-minus" type="button" id="rooms-minus">-</button>
+                              </div>
+                              <input type="number" class="form-control" id="rooms" min="1" value="1" required>
+                              <div class="input-group-append">
+                                  <button class="btn btn-outline-secondary btn-plus" type="button" id="rooms-plus">+</button>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!-- Search Button -->
+              <div class="form-group col-lg-2 col-md-6 col-sm-12">
+                  <button type="button" class="btn text-light" id="search" style="background-color: #FF1717;" onclick="window.location.href='./details-page/details.html'">Search</button>
+              </div>
+          </div>
+      </form>
+  </div>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    // Initialize Flatpickr for date selection
+    flatpickr("#dates", {
+        dateFormat: "Y-m-d",
+        mode: "range"
+    });
+
+    // Toggle guests dropdown visibility
+    document.getElementById('guests').addEventListener('click', function () {
+        var dropdown = document.getElementById('guestsDropdown');
+        dropdown.style.display = dropdown.style.display === "none" ? "block" : "none";
+    });
+
+    // Add event listeners for incrementing and decrementing adults, children, and rooms
+    document.getElementById('adults-plus').addEventListener('click', function () {
+        incrementValue('adults');
+    });
+
+    document.getElementById('adults-minus').addEventListener('click', function () {
+        decrementValue('adults');
+    });
+
+    document.getElementById('children-plus').addEventListener('click', function () {
+        incrementValue('children');
+    });
+
+    document.getElementById('children-minus').addEventListener('click', function () {
+        decrementValue('children');
+    });
+
+    document.getElementById('rooms-plus').addEventListener('click', function () {
+        incrementValue('rooms');
+    });
+
+    document.getElementById('rooms-minus').addEventListener('click', function () {
+        decrementValue('rooms');
+    });
+});
+
+// Function to increment the input value
+function incrementValue(inputId) {
+    var input = document.getElementById(inputId);
+    var currentValue = parseInt(input.value);
+    input.value = currentValue + 1;
+    updateGuests();
+}
+
+// Function to decrement the input value with a minimum of 0
+function decrementValue(inputId) {
+    var input = document.getElementById(inputId);
+    var currentValue = parseInt(input.value);
+    if (currentValue > 0) {
+        input.value = currentValue - 1;
+        updateGuests();
+    }
+}
+
+// Function to update the "Adults, Children & Rooms" input
+function updateGuests() {
+    var adults = document.getElementById('adults').value;
+    var children = document.getElementById('children').value;
+    var rooms = document.getElementById('rooms').value;
+    var guests = "Adults: " + adults + ", Children: " + children + ", Rooms: " + rooms;
+    document.getElementById('guests').value = guests;
+}
+
+</script>
+
+
+
+
+
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
@@ -118,6 +256,10 @@
     });
   };
 </script>
+
+
+
+
 
 </body>
 </html>
