--- a/single-hotel-page/index.html
+++ b/single-hotel-page/index.html
@@ -198,27 +198,137 @@
     </div>
   </div>
 </div>
+<!-- Room type and price start  -->
 <div class="roomtype-price border container shadow-sm rounded-3 mt-4">
   <div class="row d-flex justify-content-evenly">
     <div class="d-flex justify-content-around">
     </div>
     <div class="col-lg-3">
       <h5 class="pt-4 ms-1 text-center" style="color: #FF1717;">Room Type</h5>
-      <h6 class="pt-1 ms-1 text-center">Classic Room</h6>
+      <h5 class="pt-1 ms-1 text-center">Classic Room</h5>
+      <div class="image-container text-center">
+        <img
+          src="image/room type/image 5.jpg"
+          class="img-fluid  rounded-3 m-1 px-1" alt="Image 1">
+      </div>
     </div>
     <div class="col-lg-3">
       <h1>&nbsp;</h1>
-      <h6 class="pt-1 ms-1 text-center">Most popular facilities</h6>
+      <h5 class="pt-1 ms-1 text-center">Most popular facilities</h5>
+      <div class="d-flex justify-content-center align-items-center">
+        <img src="image/mostpopularfacilites/Frame 78.jpg" alt="" class="img-fluid p-2">
+        <img src="image/mostpopularfacilites/desktop_windows.jpg" alt="" class="img-fluid p-2">
+        <img src="image/mostpopularfacilites/local_dining.jpg" alt="" class="img-fluid p-2">
+        <img src="image/mostpopularfacilites/Ac unit.jpg" alt="" class="img-fluid p-2">
+        <img src="image/mostpopularfacilites/fitness_center.jpg" alt="" class="img-fluid p-2">
+      </div>
+      <h5 class="mt-4 ms-4 text-start">Room type</h5>
+      <div class="d-flex align-items-center justify-content-center">
+        <div class="d-flex  align-items-center">
+          <img src="image/roomtype images/Frame 504.jpg" alt="" class="img-fluid p-1">
+          <p class="pt-3">1 Bedroom <br>1 Bathroom</p>
+          </div>
+          <div class="d-flex  align-items-start">
+          <img src="image/roomtype images/accessibility.jpg" alt="" class="img-fluid p-1 pt-2">
+          <p class="pt-3">2 guests</p>
+          </div>
+      </div>
     </div>
     <div class="col-lg-3">
       <h1>&nbsp;</h1>
     </div>
     <div class="col-lg-3">
-      <h5 class="pt-4 me-1 text-center" style="color: #FF1717;">Price</h5>
-      <h5 class="pt-1 me-1 text-center" style="color: #FF1717;">Price</h5>
+      <h5 class="pt-4 me-1 ms-1" style="color: #FF1717;">Price</h5>
+      <h5 class="pt-1 me-1 ms-1" style="color: #FF1717;">Price</h5>
+        <p class=" pe-2 text-secondary ms-1" ><s>₹5,500</s></p>
+        <h4 class="mb-1 me-1 ms-1">₹4,125</h4>
+        <p class="pt-1">+₹ 495 taxes and charges</p>
+        <button class="btn text-light ms-1 btn-sm ms-1 mb-3" style="width: 100px; background-color: red;" type="button">Book Now</button>
     </div>
   </div>
 </div>
+<!-- Room type and price end  -->
+<div class="change-dates-and-gusts">
+
+</div>
+<!-- Amenities at Ponmozhi Residency start  -->
+<div class="Amenities-Ponmozhi-Residency">
+  <h5 class="py-3">Amenities at Ponmozhi Residency</h5>
+  <div class="row ms-1">
+    <div class="col-lg-3 col-md-6 col-sm-12 p-1 ">
+      <img src="image/facilities image/beenhere.jpg" alt="">24-hour Room Service
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-1 ">
+      <img src="image/facilities image/beenhere.jpg" alt="">Laundry and Dry Cleaning
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-1 ">
+      <img src="image/facilities image/beenhere.jpg" alt="">Power Supply Backup
+    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 p-1 ">
+      <img src="image/facilities image/beenhere.jpg" alt="">Cleaning Service
+    </div>
+  </div>
+</div>
+<!-- Amenities at Ponmozhi Residency end  -->
+<!-- location start  -->
+<div class="container mt-4">
+  <div class="roomtype-price border shadow-sm rounded-3 p-3">
+    <div class="row">
+      <div class="col-lg-6 mb-3 mb-lg-0">
+        <h5>Location</h5>
+        <p>Vengikkal Road PANMOZHI RESIDENCY, 606604 Tiruvannamalai, India</p>
+        <div class="ratio ratio-16x9">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62385.73472960047!2d79.02805262585525!3d12.240937612750832!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bacc0852cd3d6cd%3A0x74002b16e5bac856!2sTiruvannamalai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1716632708064!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="row">
+          <div class="col-md-6 mb-3">
+            <p><img src="image/location section image/assistant_direction.jpg" alt="" class="img-fluid"> Iconic Places</p>
+            <ul>
+              <li>Arunachaleswara Temple</li>
+              <p>2.0Km</p>
+              <div class="highlight-box text-dark"><b>Spiritual Sites</b></div>
+              <li>Ramana Ashram</li>
+              <p>2.0Km</p>
+              <div class="highlight-box text-dark"><b>Spiritual Sites</b></div>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <p><img src="image/location section image/commute.jpg" alt="" class="img-fluid"> Iconic Places</p>
+            <ul>
+              <li>Tiruvannamalai railway station</li>
+              <p>1.7Km</p>
+              <div class="highlight-box text-dark"><b>Railway</b></div>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- location end  -->
+<!-- question section start  -->
+<div class="question-section mt-3">
+  <h5>Travelers frequently asked questions.</h5>
+  <div class="row">
+    <div class="col-lg-6 col-md-12   my-3">
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">How can I change my account details?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I search for available rooms?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I filter search results by price, rating, or amenities?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">How do I check the availability of a room for specific dates?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">What information is required to make a booking?</p>
+    </div>
+    <div class="col-lg-6 col-md-12 my-3">
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I book multiple rooms at once?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">Is my payment information secure?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">What is the cancellation policy?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">Can I request additional amenities like a crib or extra bed?</p>
+      <p><img src="image/question section img/not_listed_location.jpg" alt="">Is there 24/7 support available?</p>
+    </div>
+  </div>
+</div>
+<!-- question section  end -->
 </div>
 <!-- hotel gallery page end -->
         </main>
