--- a/reservation page/reservation.html
+++ b/reservation page/reservation.html
@@ -232,13 +232,44 @@
             <!-- guest details section end  -->
             <!-- payment method start  -->
             <h5>Payment Method</h5>
-            <div class="border container shadow-sm rounded-3">
+            <div class="border container shadow-sm rounded-3 mb-3">
                 <div class="total-cost-overview">
                     <div class="d-flex bd-highlight justify-content-center align-items-center">
-                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 20px;">Reservation</b> <br>Pay when you check-in</div>
+                        <img class="px-1" src="image/payment method icons/stars.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Reservation</b> <br>Pay when you check-in</div>
                         <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
                     </div>
-                    <hr class=" text-danger bold">
+                    <hr class=" text-danger bold" style="margin: 1%;">
+                    <div class="d-flex bd-highlight justify-content-center align-items-center">
+                        <img class="px-1"  src="image/payment method icons/image 6.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">UPI options</b> <br>Pay directly from your Bank Account</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                    </div>
+                    <hr class=" text-danger bold" style="margin: 1%;">
+                    <div class="d-flex bd-highlight justify-content-center align-items-center">
+                        <img class="px-1"  src="image/payment method icons/credit_card.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Credit/Debit/AtM Card </b> <br>PVisa, Mastercard, Amex, Rupau and more</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                    </div>
+                    <hr class=" text-danger bold" style="margin: 1%;">
+                    <div class="d-flex bd-highlight justify-content-center align-items-center">
+                        <img class="px-1"  src="image/payment method icons/account_balance_wallet.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Net Banking</b> <br>All Major Banks Available</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                    </div>
+                    <hr class=" text-danger bold" style="margin: 1%;">
+                    <div class="d-flex bd-highlight justify-content-center align-items-center">
+                        <img class="px-1"  src="image/payment method icons/account_balance_wallet.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">Mobile Wallets</b> <br>AmazonPay, Mobikwik, Payzapp</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight "> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                    </div>
+                    <hr class=" text-danger bold" style="margin: 1%;">
+                    <div class="d-flex bd-highlight justify-content-center align-items-center">
+                        <img class="px-1"  src="image/payment method icons/Frame 623.jpg" alt="">
+                        <div class="p-1 w-100 bd-highlight"><b style="font-size: 16px;">EMI</b> <br>Credit/Debit Card EMI available</div>
+                        <div class="p-3 flex-shrink-1 bd-highlight d-flex justify-content-center align-items-center">           <div class="col-lg-12 col-md-12 rounded-1 bg-danger text-light text-center">
+                           <b> Available Soon</b></div> <img src="./image/arrow_forward_ios.jpg" alt=""> </div>
+                    </div>
                 </div>
             </div>
             <!-- payment method end  -->
