--- a/test.html
+++ b/test.html
@@ -3,40 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>30% OFF Arrow Banner</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Red Background Rectangle</title>
     <style>
-        .discount-banner {
-            position: relative;
+        .red-rectangle {
             background-color: red;
             color: white;
-            width: 104px;
-            height: 22px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 0.8rem;
-            font-weight: bold;
-            clip-path: polygon(0% 0%, 70% 0%, 85% 50%, 70% 100%, 0% 100%, 10% 50%);
+            padding: 4px 8px;
+            display: inline-block;
         }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="discount-banner ">
-            30% OFF
-        </div>
+    <div class="red-rectangle">
+        Available Soon
     </div>
-    <div class="d-flex align-items-center">
-      <div class="flex-shrink-0">
-        <img src="../Y_Spot_Rooms/assets/img/offer index/Rectangle 387 (2).png" alt="...">
-      </div>
-      <div class="flex-grow-1 ms-3">
-        This is some content from a media component. You can replace this with any content and adjust it as needed.
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
